Incorporate docs/api.mdown into the content
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1027304 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/deltacloud.org/output/client-ruby.html
+++ b/site/deltacloud.org/output/client-ruby.html
@@ -48,7 +48,7 @@
             </a>
           </li>
           <li>
-            <a class='inactive' href='api.html'>
+            <a class='inactive' href='api.mdown'>
               REST API
             </a>
           </li>
