--- a/site/deltacloud.org/output/documentation.html
+++ b/site/deltacloud.org/output/documentation.html
@@ -48,7 +48,7 @@
             </a>
           </li>
           <li>
-            <a class='inactive' href='api.html'>
+            <a class='inactive' href='api.mdown'>
               REST API
             </a>
           </li>
@@ -77,7 +77,7 @@
         <p>The Deltacloud documentation is divided into the following parts:</p>
         <ul>
           <li>
-            <a href='api.html'>
+            <a href='api.mdown'>
               REST API definition
             </a>
           </li>
