site: move framework and client-ruby out of docs/
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1027306 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/deltacloud.org/output/documentation.html
+++ b/site/deltacloud.org/output/documentation.html
@@ -48,7 +48,7 @@
             </a>
           </li>
           <li>
-            <a class='inactive' href='api.mdown'>
+            <a class='inactive' href='api.html'>
               REST API
             </a>
           </li>
@@ -77,7 +77,7 @@
         <p>The Deltacloud documentation is divided into the following parts:</p>
         <ul>
           <li>
-            <a href='api.mdown'>
+            <a href='api.html'>
               REST API definition
             </a>
           </li>
