--- a/site/deltacloud.org/output/drivers.html
+++ b/site/deltacloud.org/output/drivers.html
@@ -48,7 +48,7 @@
             </a>
           </li>
           <li>
-            <a class='inactive' href='api.mdown'>
+            <a class='inactive' href='api.html'>
               REST API
             </a>
           </li>
