site: add a roadmap
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1050232 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/index.html
+++ b/site/output/index.html
@@ -86,6 +86,13 @@
               <li>
                 Backward compatibility across versions, providing long-term stability for scripts, tools and applications
               </li>
+              <li>
+                Check the
+                <a href='roadmap.html' title='Roadmap'>
+                  roadmap
+                </a>
+                to see what we are working on
+              </li>
             </ul>
           </div>
           <div class='right'>
