site: add azure login and password info to the driver credentials table
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1060135 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/documentation.html
+++ b/site/output/documentation.html
@@ -187,7 +187,7 @@
           </tr>
           <tr>
             <td>
-              <strong>Amazon EC2</strong>
+              <strong>Amazon EC2/S3</strong>
             </td>
             <td>
               <tt>ec2</tt>
@@ -227,6 +227,23 @@
           </tr>
           <tr>
             <td>
+              <strong>Microsoft Azure (Storage Account only)</strong>
+            </td>
+            <td>
+              <tt>azure</tt>
+            </td>
+            <td>
+              Public Storage Account Name
+            </td>
+            <td>
+              Primary Access Key
+            </td>
+            <td>
+              The Storage Account Name is chosen when you create the service (e.g. name in http://name.blob.core.windows.net/). This and the access key are available from the service control panel.
+            </td>
+          </tr>
+          <tr>
+            <td>
               <strong>OpenNebula</strong>
             </td>
             <td>
@@ -246,7 +263,7 @@
           </tr>
           <tr>
             <td>
-              <strong>Rackspace</strong>
+              <strong>Rackspace Cloud Servers/Cloud Files</strong>
             </td>
             <td>
               <tt>rackspace</tt>
