--- a/site/output/download.html
+++ b/site/output/download.html
@@ -87,5 +87,15 @@
         <a href="mailto:deltacloud-dev-subscribe@incubtaor.apache.org">deltacloud-devel mailing list</a> and we'll post it here!</p>
       </div>
     </div>
+    <script type='text/javascript'>
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type='text/javascript'>
+      try {
+      var pageTracker = _gat._getTracker("UA-10510561-1");
+      pageTracker._trackPageview();
+      } catch(err) {}
+    </script>
   </body>
 </html>
