Eucalyptus: add driver to documentation
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1090467 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/documentation.html
+++ b/site/output/documentation.html
@@ -206,6 +206,21 @@
           </tr>
           <tr>
             <td>
+              <strong>Eucalyptus</strong>
+            </td>
+            <td>
+              <tt>eucalyptus</tt>
+            </td>
+            <td>
+              Access Key ID
+            </td>
+            <td>
+              Secret Access Key
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>
               <strong>GoGrid</strong>
             </td>
             <td>
