--- a/site/output/download.html
+++ b/site/output/download.html
@@ -84,7 +84,7 @@
         <h3>Your name here</h3>
         
         <p>Do you have a tool to make Deltacloud more useful? Let us know on our
-        <a href="mailto:deltacloud-dev-subscribe@incubtaor.apache.org">deltacloud-devel mailing list</a> and we'll post it here!</p>
+        <a href="mailto:deltacloud-dev-subscribe@incubator.apache.org">deltacloud-devel mailing list</a> and we'll post it here!</p>
       </div>
     </div>
     <script type='text/javascript'>
