site: update driver matrices for 0.3.0
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1097645 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/documentation.html
+++ b/site/output/documentation.html
@@ -242,6 +242,21 @@
           </tr>
           <tr>
             <td>
+              <strong>IBM SBC</strong>
+            </td>
+            <td>
+              <tt>sbc</tt>
+            </td>
+            <td>
+              Username
+            </td>
+            <td>
+              Password
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>
               <strong>Microsoft Azure (Storage Account only)</strong>
             </td>
             <td>
