--- a/site/output/drivers.html
+++ b/site/output/drivers.html
@@ -222,6 +222,34 @@
           </tr>
           <tr>
             <td class='provider'>
+              Eucalyptus
+            </td>
+            <td class="supported">yes</td>
+            <td class="not-supported">no</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+          </tr>
+          <tr>
+            <td class='provider'>
+              IBM SBC
+            </td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+          </tr>
+          <tr>
+            <td class='provider'>
               GoGrid
             </td>
             <td class="supported">yes</td>
@@ -306,7 +334,7 @@
           </tr>
           <tr>
             <td class='provider'>
-              vCloud
+              vSphere
               <span>coming soon</span>
             </td>
             <td class="supported">yes</td>
@@ -362,6 +390,17 @@
           </tr>
           <tr>
             <td class='provider'>
+              Eucalyptus Walrus
+            </td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+          </tr>
+          <tr>
+            <td class='provider'>
               Rackspace CloudFiles
             </td>
             <td class="supported">yes</td>
@@ -374,14 +413,13 @@
           <tr>
             <td class='provider'>
               Microsoft Azure
-              <span>coming soon</span>
             </td>
-            <td class="not-supported">TBD</td>
-            <td class="not-supported">TBD</td>
-            <td class="not-supported">TBD</td>
-            <td class="not-supported">TBD</td>
-            <td class="not-supported">TBD</td>
-            <td class="not-supported">TBD</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
+            <td class="supported">yes</td>
           </tr>
           <tr>
             <td class='provider'>
