site: add ASF incubator logo and disclaimer to layout
Fixes https://issues.apache.org/jira/browse/DTACLOUD-70

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1160492 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/api.html
+++ b/site/output/api.html
@@ -1991,5 +1991,25 @@
         <hr />
       </div>
     </div>
+    <div id='footer-deltacloud'>
+      <div class='container'>
+        <p>
+          <a href='http://incubator.apache.org'>
+            <img alt='Apache Incubator Logo' src='http://incubator.apache.org/images/apache-incubator-logo.png' />
+          </a>
+        </p>
+        <p id='disclaimer'>
+          Apache Deltacloud is an effort undergoing incubation at The
+          Apache Software Foundation (ASF), sponsored by the name of
+          sponsor. Incubation is required of all newly accepted projects
+          until a further review indicates that the infrastructure,
+          communications, and decision making process have stabilized in a
+          manner consistent with other successful ASF projects. While
+          incubation status is not necessarily a reflection of the
+          completeness or stability of the code, it does indicate that the
+          project has yet to be fully endorsed by the ASF.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
