--- a/site/output/dcloud-demo.html
+++ b/site/output/dcloud-demo.html
@@ -49,7 +49,7 @@
             <param name='wmode' value='opaque' />
             <param name='scale' value='noscale' />
             <param name='salign' value='lt' />
-            <param name='FlashVars' value='&amp;MM_ComponentVersion=1&amp;skinName=Clear_Skin_1&amp;streamName=video/DCloud_Demo&amp;autoPlay=true&amp;autoRewind=false' />
+            <param name='FlashVars' value='&amp;amp;MM_ComponentVersion=1&amp;amp;skinName=Clear_Skin_1&amp;amp;streamName=video/DCloud_Demo&amp;amp;autoPlay=true&amp;amp;autoRewind=false' />
             <param name='swfversion' value='8,0,0,0' />
             <!--
               This param tag prompts users with Flash Player 6.0 r65 and higher to download the latest version of Flash Player. Delete it if you don’t want users to see the prompt.
@@ -69,7 +69,7 @@
               <param name='wmode' value='opaque' />
               <param name='scale' value='noscale' />
               <param name='salign' value='lt' />
-              <param name='FlashVars' value='&amp;MM_ComponentVersion=1&amp;skinName=Clear_Skin_1&amp;streamName=video/DCloud_Demo&amp;autoPlay=true&amp;autoRewind=false' />
+              <param name='FlashVars' value='&amp;amp;MM_ComponentVersion=1&amp;amp;skinName=Clear_Skin_1&amp;amp;streamName=video/DCloud_Demo&amp;amp;autoPlay=true&amp;amp;autoRewind=false' />
               <param name='swfversion' value='8,0,0,0' />
               <param name='expressinstall' value='Scripts/expressInstall.swf' />
               <!--
@@ -94,6 +94,26 @@
             -->
           </object>
         </div>
+      </div>
+    </div>
+    <div id='footer-deltacloud'>
+      <div class='container'>
+        <p>
+          <a href='http://incubator.apache.org'>
+            <img alt='Apache Incubator Logo' src='http://incubator.apache.org/images/apache-incubator-logo.png' />
+          </a>
+        </p>
+        <p id='disclaimer'>
+          Apache Deltacloud is an effort undergoing incubation at The
+          Apache Software Foundation (ASF), sponsored by the name of
+          sponsor. Incubation is required of all newly accepted projects
+          until a further review indicates that the infrastructure,
+          communications, and decision making process have stabilized in a
+          manner consistent with other successful ASF projects. While
+          incubation status is not necessarily a reflection of the
+          completeness or stability of the code, it does indicate that the
+          project has yet to be fully endorsed by the ASF.
+        </p>
       </div>
     </div>
   </body>
