Site Docs udpate - Edits the hopepage, download page, adds contact page
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1185123 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/index.html
+++ b/site/output/index.html
@@ -52,10 +52,13 @@
             <a class='inactive' href='./download.html' title='Get the latest releases'>Download</a>
           </li>
           <li>
-            <a class='inactive' href='./contribute.html' title='Information about design/development process'>Contribute</a>
+            <a class='inactive' href='./developers.html' title='Information for developers'>Developers</a>
           </li>
           <li>
             <a class='inactive' href='./documentation.html' title='Project documentation'>Documentation</a>
+          </li>
+          <li>
+            <a class='inactive' href='./contact.html' title='Contact us!'>Contact</a>
           </li>
         </ul>
       </div>
@@ -73,18 +76,21 @@
           <div class='colleft'>
             <p>
               <em>
-                Deltacloud Core
+                Deltacloud
               </em>
               gives you:
             </p>
             <ul>
               <li>
-                REST API (simple, any-platform access)
+                A
+                <a href='api.html'>
+                  RESTful API
+                </a>
+                for simple, any-platform access
               </li>
               <li>
-                <a class='providers' href='#providers' title='Supported providers'>
-                  Support for all major cloud service providers
-                </a>
+                Support for all
+                <a class='providers' href='#providers' title='Supported providers'>major cloud service providers</a>
               </li>
               <li>
                 Backward compatibility across versions, providing long-term stability for scripts, tools and applications
@@ -102,12 +108,12 @@
             <img alt='diagram-soa' height='265' src='styles/diagram-soa.png' style='margin-bottom:1em;' width='620' />
           </div>
           <p class='foot'>
-            The
-            <a href='documentation.html'>
-              Deltacloud Core
+            <em>Deltacloud</em>
+            makes it easy for cloud providers to
+            <a href='developers.html'>
+              add their cloud
             </a>
-            makes it easy for cloud
-            providers to add their cloud to the Deltacloud common API.
+            to the Deltacloud API.
           </p>
         </div>
         <div id='news'>
@@ -117,12 +123,12 @@
               <div class='tweet'></div>
             </h2>
           </div>
-          <br />
-          <br />
         </div>
+        <br />
+        <br />
         <div id='popups' style='display:none;'>
           <div id='providers'>
-            <h3>Compute Drivers</h3>
+            <h3>Compute Driver Functionality</h3>
             <table id='providers'>
               <tr>
                 <th class='emptycell'>&nbsp;</th>
@@ -305,17 +311,17 @@
                 <td class="supported">yes</td>
               </tr>
             </table>
-            <h3>Storage Drivers</h3>
+            <h3>Storage Driver Functionality</h3>
             <table id='providers'>
               <tr>
                 <th class='emptycell'>&nbsp;</th>
                 <th>
                   <strong>Create</strong>
-                  new containers
+                  new buckets
                 </th>
                 <th>
                   <strong>Update/delete</strong>
-                  containers
+                  buckets
                 </th>
                 <th>
                   <strong>Create</strong>
