Site Docs update - Adds information for developers, getting started and installation guide.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1185125 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/client-ruby.html
+++ b/site/output/client-ruby.html
@@ -31,10 +31,13 @@
             <a class='inactive' href='./download.html' title='Get the latest releases'>Download</a>
           </li>
           <li>
-            <a class='inactive' href='./contribute.html' title='Information about design/development process'>Contribute</a>
+            <a class='inactive' href='./developers.html' title='Information for developers'>Developers</a>
           </li>
           <li>
             <a class='active' href='./documentation.html' title='Project documentation'>Documentation</a>
+          </li>
+          <li>
+            <a class='inactive' href='./contact.html' title='Contact us!'>Contact</a>
           </li>
         </ul>
       </div>
@@ -44,7 +47,7 @@
         <ul class='l1'>
           <li>
             <a class='inactive' href='documentation.html'>
-              Overview
+              Installation
             </a>
           </li>
           <li>
@@ -55,11 +58,6 @@
           <li>
             <a class='inactive' href='drivers.html'>
               Drivers
-            </a>
-          </li>
-          <li>
-            <a class='inactive' href='framework.html'>
-              Framework
             </a>
           </li>
           <li>
