--- a/site/output/roadmap.html
+++ b/site/output/roadmap.html
@@ -31,10 +31,13 @@
             <a class='inactive' href='./download.html' title='Get the latest releases'>Download</a>
           </li>
           <li>
-            <a class='inactive' href='./contribute.html' title='Information about design/development process'>Contribute</a>
+            <a class='inactive' href='./developers.html' title='Information for developers'>Developers</a>
           </li>
           <li>
             <a class='inactive' href='./documentation.html' title='Project documentation'>Documentation</a>
+          </li>
+          <li>
+            <a class='inactive' href='./contact.html' title='Contact us!'>Contact</a>
           </li>
         </ul>
       </div>
@@ -59,9 +62,9 @@
         in order of priority.</p>
         
         <p>If you have anything you'd like to see added to the roadmap, or think that
-        some items should receive more attention, please let us know on the
-        <a href="/contribute.html">mailing list</a>. Of course, the quickest way to get anything into
-        Deltacloud is to <a href="/contribute.html">send us patches</a> &mdash; we will of course take patches
+        some items should receive more attention, please <a href="contact.html">let us know</a>.
+        Of course, the quickest way to get anything into
+        Deltacloud is to send us patches; we will of course take patches
         for anything, regardless of whether they adress items on the roadmap or
         anything else.</p>
         
