Remove references to incubator from deltacloud website
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1214341 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -50,7 +50,7 @@
         <p>We'd love to hear about your experiences with Deltacloud:</p>
         
         <ul>
-        <li><a href="http://mail-archives.apache.org/mod_mbox/incubator-deltacloud-dev/">deltacloud-dev@incubator.apache.org</a>
+        <li><a href="http://mail-archives.apache.org/mod_mbox/deltacloud-dev/">dev@deltacloud.apache.org</a>
         is our mailing list where you can ask questions or see all the latest patches and development activity
         at the bleeding edge of the project,</li>
         <li>The <a href="http://webchat.freenode.net/">#deltacloud</a> irc channel on Freenode is where
@@ -75,20 +75,16 @@
     <div id='footer-deltacloud'>
       <div class='container'>
         <p>
-          <a href='http://incubator.apache.org'>
-            <img alt='Apache Incubator Logo' src='http://incubator.apache.org/images/apache-incubator-logo.png' />
+          <a href='http://www.apache.org'>
+            <img alt='Apache Software Foundation Logo' src='http://www.apache.org/images/asf_logo_wide.png' />
           </a>
         </p>
         <p id='disclaimer'>
-          Apache Deltacloud is an effort undergoing incubation at The
-          Apache Software Foundation (ASF), sponsored by the Apache
-          Incubator PMC. Incubation is required of all newly accepted
-          projects until a further review indicates that the
-          infrastructure, communications, and decision making process have
-          stabilized in a manner consistent with other successful ASF
-          projects. While incubation status is not necessarily a reflection
-          of the completeness or stability of the code, it does indicate
-          that the project has yet to be fully endorsed by the ASF.
+          Apache Deltacloud is a top-level project at the Apache
+          Software Foundation, having graduated from the ASF Incubator
+          in October 2011. Through a collaborative and meritocratic
+          development process, Apache projects deliver enterprise-grade,
+          freely available software products that attract large communities of users.
         </p>
       </div>
     </div>
