--- a/site/output/roadmap.html
+++ b/site/output/roadmap.html
@@ -205,20 +205,16 @@
     <div id='footer-deltacloud'>
       <div class='container'>
         <p>
-          <a href='http://incubator.apache.org'>
-            <img alt='Apache Incubator Logo' src='http://incubator.apache.org/images/apache-incubator-logo.png' />
+          <a href='http://www.apache.org'>
+            <img alt='Apache Software Foundation Logo' src='http://www.apache.org/images/asf_logo_wide.png' />
           </a>
         </p>
         <p id='disclaimer'>
-          Apache Deltacloud is an effort undergoing incubation at The
-          Apache Software Foundation (ASF), sponsored by the Apache
-          Incubator PMC. Incubation is required of all newly accepted
-          projects until a further review indicates that the
-          infrastructure, communications, and decision making process have
-          stabilized in a manner consistent with other successful ASF
-          projects. While incubation status is not necessarily a reflection
-          of the completeness or stability of the code, it does indicate
-          that the project has yet to be fully endorsed by the ASF.
+          Apache Deltacloud is a top-level project at the Apache
+          Software Foundation, having graduated from the ASF Incubator
+          in October 2011. Through a collaborative and meritocratic
+          development process, Apache projects deliver enterprise-grade,
+          freely available software products that attract large communities of users.
         </p>
       </div>
     </div>
